fix z-index of small screen nav

--- a/src/sections/Home/home.css
+++ b/src/sections/Home/home.css
@@ -43,7 +43,6 @@
     justify-content: center;
     position: relative;
     top: 20%;
-    z-index: 1;
 }
 
 .home .contactIcon {
